--- a/index.html
+++ b/index.html
@@ -9,56 +9,56 @@
             </div>
             <div id="theCalculator">
                 <div id="screen">
-                    <p id="equation">46</p>
+                    <p id="equation"></p>
                     <p id="result">456</p>
                 </div>
                 <div id="buttons">
-                    <div class="button" id="1">
+                    <div onclick = "toEquation(1)" class="button" id="1">
                         <button class="button">1</button>
                     </div>
-                    <div class="button" id="2">
+                    <div onclick = "toEquation(2)" class="button" id="2">
                         <button class="button">2</button>
                     </div>
-                    <div class="button" id="3">
+                    <div onclick = "toEquation(3)" class="button" id="3">
                         <button class="button">3</button>
                     </div>
-                    <div class="button" id="+">
+                    <div onclick = "toEquation('+')" class="button" id="sum">
                         <button class="button">+</button>
                     </div>
-                    <div class="button" id="4">
+                    <div onclick = "toEquation(4)" class="button" id="4">
                         <button class="button">4</button>
                     </div>
-                    <div class="button" id="5">
+                    <div onclick = "toEquation(5)" class="button" id="5">
                         <button class="button">5</button>
                     </div>
-                    <div class="button" id="6">
+                    <div onclick = "toEquation(6)" class="button" id="6">
                         <button class="button">6</button>
                     </div>
-                    <div class="button" id="subtract">
+                    <div onclick = "toEquation('-')" class="button" id="subtract">
                         <button class="button">-</button>
                     </div>
-                    <div class="button" id="7">
+                    <div onclick = "toEquation(7)" class="button" id="7">
                         <button class="button">7</button>
                     </div>
-                    <div class="button" id="8">
+                    <div onclick = "toEquation(8)" class="button" id="8">
                         <button class="button">8</button>
                     </div>
-                    <div class="button" id="9">
+                    <div onclick = "toEquation(9)" class="button" id="9">
                         <button class="button">9</button>
                     </div>
-                    <div class="button" id="multiply">
+                    <div onclick = "toEquation('*')" class="button" id="multiply">
                         <button class="button">*</button>
                     </div>
-                    <div class="button" id="clear">
+                    <div onclick = "clearEquation()" class="button" id="clear">
                         <button class="button">CE</button>
                     </div>
-                    <div class="button" id="0">
+                    <div onclick = "toEquation(0)" class="button" id="0">
                         <button class="button">0</button>
                     </div>
-                    <div class="button" id="operate">
+                    <div onclick = "operate()" class="button" id="operate">
                         <button class="button">=</button>
                     </div>
-                    <div class="button" id="divide">
+                    <div onclick = "toEquation('/')" class="button" id="divide">
                         <button class="button">/</button>
                     </div>
                 </div>
