complete functional NO keyboard link

--- a/index.html
+++ b/index.html
@@ -55,16 +55,12 @@
                     <div onclick = "toEquation('0')" class="button" id="0">
                         <button class="button">0</button>
                     </div>
-                    <div onclick = "toEquation('=')" class="button" id="operate">
-                        <button id="operate" class="button">=</button>
-                    </div>
-                    <div onclick = "toEquation('.')" class="button" id="dot">
-                        <button class="button">.</button>
+                    
+                    <div onclick = "toEquation('=')" class="button" id="dot">
+                        <button class="button">=</button>
                     </div>
                     <div onclick = "toEquation('/')" class="button" id="divide">
                         <button class="button">/</button>
-                    </div><div onclick = "erase(str)" class="button" id="erase">
-                        <button class="button">bs</button>
                     </div>
                 </div>
                 
